syntax = "proto3";
option go_package = "gofast/proto";
package proto;

import "user.proto";
import "note.proto";

message Empty {}

message ID {
    string id = 1;
}

message PageRequest {
    int64 page = 1;
    int64 limit = 2;
}

message CountResponse {
    int64 count = 1;
}

message AuthResponse {
    string access_token = 1;
    string refresh_token = 2;
}

service AuthService {
    rpc Refresh(Empty) returns (AuthResponse) {}
}

service UserService {
    rpc GetAllUsers(Empty) returns (stream User) {}
    rpc GetUserByID(ID) returns (User) {}
    rpc EditUserAccess(User) returns (User) {}
}

service NoteService {
    rpc GetAllNotes(Empty) returns (stream Note) {}
    rpc GetNoteByID(ID) returns (Note) {}
    rpc CreateNote(NoteRequest) returns (Note) {}
    rpc EditNote(NoteRequest) returns (Note) {}
    rpc RemoveNote(ID) returns (Empty) {}
}
